--- a/.github/workflows/28552_deploy.yml
+++ b/.github/workflows/28552_deploy.yml
@@ -2,15 +2,14 @@ name: Deploy na DockerHub
 
 on:
   workflow_run:
-    workflows: ["Testiranje Radix Sort"]  #Se sprozi, ko se prejsnji workflow konca
+    workflows: ["Testiranje Radix Sort"]
     types:
       - completed
 
 jobs:
   build_and_deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: self-hosted
-    needs: preveri_teste  #Testi se morajo pravilno izvesti
-
     steps:
       - name: Checkout kode
         uses: actions/checkout@v4
@@ -18,18 +17,18 @@ jobs:
       - name: Prijava v DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}   #DockerHub uporabniško ime
-          password: ${{ secrets.DOCKER_PASSWORD }}   #DockerHub geslo
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Gradnja Docker slike
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/Binarni_Radix_Sort:${{ github.sha }} .
-      
+
       - name: Pushing Docker slike na DockerHub
         run: |
           docker push ${{ secrets.DOCKER_USERNAME }}/Binarni_Radix_Sort:${{ github.sha }}
 
-      - name: Potisni najnovejsi DockerHub
+      - name: Potisni najnovejšo različico (latest)
         run: |
           docker tag ${{ secrets.DOCKER_USERNAME }}/Binarni_Radix_Sort:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/Binarni_Radix_Sort:latest
           docker push ${{ secrets.DOCKER_USERNAME }}/Binarni_Radix_Sort:latest
