--- a/.github/workflows/28552_deploy.yml
+++ b/.github/workflows/28552_deploy.yml
@@ -1,5 +1,8 @@
 name: Deploy na DockerHub
 
+env:
+  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+  DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 on:
   workflow_run:
     workflows: ["Testiranje Radix Sort"]
@@ -8,27 +11,20 @@ on:
 
 jobs:
   build_and_deploy:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: self-hosted
     steps:
       - name: Checkout kode
         uses: actions/checkout@v4
 
       - name: Prijava v DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+        run: |
+          docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
 
       - name: Gradnja Docker slike
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/Binarni_Radix_Sort:${{ github.sha }} .
+          docker build -t $DOCKER_USERNAME/binarni_radix_sort:${{ github.sha }} .
 
       - name: Pushing Docker slike na DockerHub
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/Binarni_Radix_Sort:${{ github.sha }}
+          docker push $DOCKER_USERNAME/binarni_radix_sort:${{ github.sha }}
 
-      - name: Potisni najnovejšo različico (latest)
-        run: |
-          docker tag ${{ secrets.DOCKER_USERNAME }}/Binarni_Radix_Sort:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/Binarni_Radix_Sort:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/Binarni_Radix_Sort:latest
