--- a/.github/workflows/28552_deploy.yml
+++ b/.github/workflows/28552_deploy.yml
@@ -1,6 +1,6 @@
 name: Deploy na DockerHub
 
-env:
+env: #Pridobimo username in password od dockerhub repozitorija
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 on:
