--- a/.github/workflows/28552_test.yml
+++ b/.github/workflows/28552_test.yml
@@ -2,7 +2,7 @@ name: Testiranje Radix Sort
 
 on:
   push:
-    branches: [ "CI/CD" ]
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
